--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "firebase": "^12.0.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
